# mimir

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
examples/: computational_tasks.pl  fuzzy_engine.pl  fuzzy_engine.rs  graph.pl  list_operations.pl  quicksort.pl  sort_rust.rs  timer.rs  trapezoid.pl
report/: logbook.typ  main.typ  poster.typ  presentation.typ  refs.bib  template.typ
src/: _parser.rs  engine.rs  error.rs  lib.rs  macros.rs  main.rs  parser.rs  translator.rs
src/engine/: engine.rs  mod.rs  representation.rs  state.rs
src/parser/: _ast.rs  ast.rs  clause_parsing.rs  mod.rs  parser.rs  term_parsing.rs
tests/: engine.rs  parser.rs  parser_tests.rs  representation_tests.rs
tests/prolog_files/: ancestors.pl  binary_tree.pl  fuzzy.pl  terms.pl
