[package]
name = "mimir"
version = "0.1.0"
edition = "2024"

[[example]]
name = "fuzzy_engine"

[dev-dependencies]
egui = "0.34"
eframe = "0.34"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[dependencies]
nom = "8.0"
nom-language = "0.1"
thiserror = "2.0"
ordered-float = "5.1"
